Fixes widths on mobile

--- a/apps/onboarding/stylesheets/mobile.styl
+++ b/apps/onboarding/stylesheets/mobile.styl
@@ -26,9 +26,10 @@
     // Disables numbering/lettering
     &:before
     > ol > li:before
-      content ''
+      display none
 
     > ol > li
+    &__caption
       padding-left 0
 
     &--active
@@ -41,6 +42,7 @@
 
     &__pane
       display block
+      width 100% !important
       height auto
       border none
       padding 0
